@@ -25,17 +25,17 @@ plugins {
     id "idea"
     id "jacoco"
     id "org.springframework.boot"
-    id "com.google.cloud.tools.jib" version "2.4.0"
+    id "com.google.cloud.tools.jib" version "2.5.0"
     id "com.github.node-gradle.node"
     id "net.ltgt.apt-eclipse"
     id "net.ltgt.apt-idea"
     id "net.ltgt.apt"
     //jhipster-needle-gradle-plugins - JHipster will add additional gradle plugins here
-    id "com.diffplug.spotless" version "5.1.1"
+    id "com.diffplug.spotless" version "5.2.0"
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.4.1"
+version = "4.4.6"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=14
@@ -78,9 +78,10 @@ spotless {
             exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
         }
         importOrderFile "artemis-spotless.importorder"
-        removeUnusedImports()
-
         eclipse().configFile "artemis-spotless-style.xml"
+
+        // the following command is not compatible with Java14 switch expressions
+//        removeUnusedImports()
     }
 }
 
@@ -90,9 +91,14 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 // Execute the test cases: ./gradlew executeTests
 
 test {
+    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
     exclude "**/*IT*", "**/*IntTest*", "**/*CucumberIT*"
     testLogging.showStandardStreams = true
@@ -104,6 +110,7 @@ test {
 }
 
 task integrationTest(type: Test) {
+    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -129,13 +136,20 @@ task integrationTestReport(type: TestReport) {
     reportOn integrationTest
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 jacocoTestCoverageVerification {
     violationRules {
         rule {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.70
+                // TODO: in the future the following value should become at least 0.80
+                minimum = 0.76
             }
         }
     }
@@ -159,7 +173,7 @@ repositories {
 
 dependencies {
     implementation 'com.offbytwo.jenkins:jenkins-client:0.3.8'
-    implementation 'org.gitlab4j:gitlab4j-api:4.15.4'
+    implementation 'org.gitlab4j:gitlab4j-api:4.15.6'
 
     // TODO: at the moment we cannot upgrade to a higher version of acli due to conflicts with the used LoggerFactory
     // the problem is that newer versions integrate the logging framework directly into the jar file instead of referencing
@@ -184,7 +198,7 @@ dependencies {
 
     implementation "io.github.jhipster:jhipster-framework"
     implementation "org.springframework.boot:spring-boot-starter-cache:${spring_boot_version}"
-    implementation "io.micrometer:micrometer-registry-prometheus:1.5.3"
+    implementation "io.micrometer:micrometer-registry-prometheus:1.5.4"
     implementation "net.logstash.logback:logstash-logback-encoder:6.4"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_version}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_version}"
@@ -192,7 +206,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-annotations:${fasterxml_version}"
     implementation "com.fasterxml.jackson.core:jackson-databind:${fasterxml_version}"
     implementation "com.hazelcast:hazelcast:4.0.2"
-    implementation "com.hazelcast:hazelcast-hibernate53:2.1.0"
+    implementation "com.hazelcast:hazelcast-hibernate53:2.1.1"
     implementation "com.hazelcast:hazelcast-spring:4.0.2"
     implementation "javax.cache:cache-api:1.1.1"
     implementation "org.hibernate:hibernate-core"
@@ -218,24 +232,24 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
 
     implementation "org.springframework.ldap:spring-ldap-core:2.3.3.RELEASE"
-    implementation "org.springframework.data:spring-data-ldap:2.3.2.RELEASE"
+    implementation "org.springframework.data:spring-data-ldap:2.3.3.RELEASE"
 
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.4.RELEASE"
-    implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.4.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.5.RELEASE"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.9.RELEASE"
 
     // https://docs.spring.io/spring/docs/4.3.15.RELEASE/spring-framework-reference/html/websocket.html#websocket-stomp-handle-broker-relay
     implementation "io.netty:netty-all:4.1.49.Final"
-    implementation "io.projectreactor.netty:reactor-netty:0.9.10.RELEASE"
+    implementation "io.projectreactor.netty:reactor-netty:0.9.11.RELEASE"
     implementation "org.springframework:spring-messaging:5.2.8.RELEASE"
-    implementation "org.apache.servicemix.bundles:org.apache.servicemix.bundles.spring-messaging:5.2.7.RELEASE_1"
+    implementation "org.apache.servicemix.bundles:org.apache.servicemix.bundles.spring-messaging:5.2.8.RELEASE_1"
 
     implementation "org.springframework.security:spring-security-config:${spring_security_version}"
     implementation "org.springframework.security:spring-security-data:${spring_security_version}"
     implementation "org.springframework.security:spring-security-web:${spring_security_version}"
     implementation "org.springframework.security:spring-security-messaging:${spring_security_version}"
     implementation "org.springframework.security:spring-security-ldap:${spring_security_version}"
-    implementation "org.xmlbeam:xmlprojector:1.4.16"
+    implementation "org.xmlbeam:xmlprojector:1.4.17"
     implementation "io.jsonwebtoken:jjwt-api:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
@@ -264,12 +278,12 @@ dependencies {
     }
     testImplementation "org.springframework.security:spring-security-test:${spring_security_version}"
     testImplementation "org.springframework.boot:spring-boot-test:${spring_boot_version}"
-    testImplementation "org.assertj:assertj-core:3.16.1"
+    testImplementation "org.assertj:assertj-core:3.17.0"
     testImplementation "org.junit.jupiter:junit-jupiter:${junit_version}"
     testImplementation 'com.tngtech.archunit:archunit-junit5-api:0.14.1'
     testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:0.14.1'
-    testImplementation "org.mockito:mockito-core:3.4.6"
-    testImplementation "org.mockito:mockito-junit-jupiter:3.4.6"
+    testImplementation "org.mockito:mockito-core:${mockito_version}"
+    testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"
     testImplementation "org.hamcrest:hamcrest-library:2.2"
     testImplementation "com.h2database:h2:1.4.200"
     testImplementation "org.awaitility:awaitility:4.0.3"
@@ -326,7 +340,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.5.1"
+    gradleVersion = "6.6.1"
 }
 
 task stage(dependsOn: "bootWar") {
@@ -343,7 +357,7 @@ if (project.hasProperty("nodeInstall")) {
 
 // Command to execute the JavaDoc checkstyle verification ./gradlew checkstyleMain
 checkstyle {
-    toolVersion "8.10"
+    toolVersion "8.36"
     configFile file("${rootDir}/checkstyle.xml")
     checkstyleTest.enabled = false
     maxErrors = 0
